@@ -3,11 +3,11 @@
     title="${field.description}">
   <!-- sequence_item -->
 
-  <img class="deformClosebutton" 
-       id="${field.oid}-close"
-       tal:condition="not field.widget.hidden"
-       src="${parent.widget.closebutton_url}" 
-       alt="Remove" onclick="javascript:$(this).parent().remove();"/>
+  <span class="deformClosebutton" 
+        id="${field.oid}-close" 
+        tal:condition="not field.widget.hidden"
+        title="Remove"
+        onclick="javascript:$(this).parent().remove();"></span>
 
   <span tal:replace="structure field.serialize(cstruct)"/>
 
@@ -15,7 +15,7 @@
      tal:define="errstr 'error-%s' % field.oid"
      tal:repeat="msg field.error.messages()"
      tal:attributes="id repeat.msg.index==0 and errstr or 
-                       ('%s-%s' % (errstr, repeat.msg.index))"
+                     ('%s-%s' % (errstr, repeat.msg.index))"
      class="${field.widget.error_class}">${msg}</p>
 
   <!-- /sequence_item -->
